# MultiModalDB

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: news_apple.txt  news_google.txt
knowledgeDB/: createDB.py  dbAPI.py  encoderAPI.py  llmAPI.py  searchDB.py
